--- a/ritmo.html
+++ b/ritmo.html
@@ -266,7 +266,7 @@ function canPlayAudio(file) {
 /* ============================= CONFIG ============================= */
 const baseQuestions = [
  {
-   pretext: "Escucha el modelo y elige la opción que sea idéntica al modelo. <br>Para contestar da clic en el recuadro que tiene signo de interrogación. <br>Toma en cuenta que en el examen AMG solo podrás escuchar 2 veces el modelo y las opciones de respuesta. <br> <span style='color:red; font-weight:600;'>Para repetir el ejercicio recarga la página</span>, cambiarán de orden la opciones de respuesta.",
+   pretext: "Escucha el modelo y elige la opción que sea idéntica al modelo. <br>Para contestar da clic en el recuadro que tiene signo de interrogación. <br> <span style='color:red; font-weight:600;'>Para repetir el ejercicio recarga la página</span>, cambiarán de orden la opciones de respuesta.",
    audio: "p1.mp3",
    question: "",
    answers: [
